<resources>
    <string name="app_name">TodoListFragment</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="title_activity_acitivity_detaille">acitivity_detaille</string>
    <string name="title_activity_settings">activity settings</string>
    <string name="earthquake_refresh">refresh</string>
    <string name="earthquakes_filter">filter</string>
    <string name="PREF_AUTO_UPDATE">update</string>
    <string name="actualizar">actualizar</string>
    <string name="acutalizar">actualizamos</string>
</resources>
